Sat May 14 12:06:49 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/context.rb (class RDoc):  Fix infinite loop caused by
	  re-encountering BasicObject.

Sat May 14 10:32:36 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_pkey_rsa.rb: Add tests that ensure new public key
	encoding behavior and also ensure backward compatibility.
	[Ruby 1.9 - Bug #4421, Bug #4422] [ruby-core:35327,35328]

Sat May 14 09:50:10 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/yaml/dbm.rb:  Add documentation.  Patch by Justin Collins.
          [Ruby 1.9 - Bug #4693]
	* lib/yaml/store.rb:  ditto

Sat May 14 09:31:43 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc.rb: Updated to RDoc 3.6

Sat May 14 07:30:29 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: released a new gem, so increasing version.

Sat May 14 05:08:32 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_digest.c
	* ext/openssl/ossl_pkey.c
	* ext/openssl/ossl_pkey.h
	* test/openssl/pkey/test_pkey_rsa.rb
	Reverted premature commit. Sorry for the noise!

Sat May 14 05:02:58 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/uri.rb:  Add toplevel documentation.  Patch by Vincent Batts.
	  [Ruby 1.9 - Bug #4690]

Sat May 14 04:19:06 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* NEWS: Describe altered behaviour for RSA and DSA public key
	encoding. [Ruby 1.9 - Bug #4421, Bug #4422]
	[ruby-core:35327,35328]

Sat May 14 02:57:52 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/ipaddr.rb (unless Socket):  Document valid*? methods.  Patch by
	  Sebastian Martinez.  [Ruby 1.9 - Feature #4687]

Sat May 14 02:54:04 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rexml/functions.rb:  Add some documentation for REXML::Functions.
	  Patch by Sebastian Martinez.  [Ruby 1.9 - Feature #4688]

Sat May 14 02:51:42 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/resolv.rb:  Hide private method and state-tracking constants from